# HirasawaBot

./: .gitignore  command_executor.py  commands.py  config.yaml  cv_utils.py  demo.py  jm_option.yml  main.py  parse_luapy.py  pyproject.toml
data/: rbac.json
data/HirasawaBot/: .gitignore
data/HirasawaBot/prompts/: analyse_jokes.j2  critic.j2  group_pop.j2  mimic.j2
plugins/hirasawa_bot/: MatlikeProtocal.py  __init__.py  ai_uitils.py  ai_utils.py  async_demo.py  bot_utils.py  falsify_sig.py  falsifysignature.py  isaac_utis.py  mypy_strange_prob.py  nullsafedict.py  type_gymnastics.py  whoisspy.py
