[project]
name = "hirasawabot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jmcomic>=2.6.9",
    "lxml>=6.0.2",
    "ncatbot>=4.2.4",
    "pyyaml>=6.0.3",
    "pyzipper>=0.3.6",
]

[[tool.uv.index]]
name = "ncatbot"
url = "https://mirrors.aliyun.com/pypi/simple"

[[tool.uv.index]]
name = "jmcomic"
url = "https://pypi.org/project"
